--- a/me/index.html
+++ b/me/index.html
@@ -110,13 +110,11 @@
                         <p>敏感/认真/追求完美，喜欢游泳，爱好摄影
                             <br />自工作以来，共计完成页面重构、开发共计800余</p>
                         <ul>
-                            <li><a href="http://www.w3cmm.com/imoney/" target="_blank">JavaScript iMoney库</a>
+                            <li><a href="https://github.com/stormtea123/iMoney" target="_blank">JavaScript iMoney库</a>
                             </li>
                             <li><a href="http://www.w3cmm.com/me/plug" target="_blank">JavaScript组件/jQuery组件</a>
                             </li>
                             <li><a href="https://github.com/stormtea123" target="_blank">Github</a>
-                            </li>
-                            <li><a href="http://www.w3cmm.com/" target="_blank">学习笔记</a>
                             </li>
                             <li><a href="http://stormtea123.github.io/" target="_blank">GetHub pages</a>
                             </li>
